# fontdiff

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile_coverage  Dockerfile_production  README.md  test_harness.sh
doc/: RunningInstruction.md
src/: CMakeLists.txt
src/coverage_experiment/: coverage_experiment
src/docker_run_scripts/: coverage_experiment
src/fontdiff/: CMakeLists.txt  argument_parser.cc  argument_parser.h  cairo_helper.cc  cairo_helper.h  diff_job.cc  diff_job.h  font.cc  font.h  font_collection.cc  font_collection.h  font_loader.cc  font_loader.h  fontdiff.gyp  icu_helper.cc  icu_helper.h  language.cc  language.h  line.cc  line.h  line_differ.cc  line_differ.h  main.cc  page.cc  page.h  paragraph.cc  paragraph.h  sha1.cc  sha1.h  shaped_text.cc  shaped_text.h  style.cc  style.h  style_key.cc  style_key.h  version.cc  version.h
src/test/: README.md  generate_coverage_report.py  t_argument_parser.cc  t_argument_parser.h  t_font.cc  t_font.h  t_font_collection.cc  t_font_collection.h  t_main.cc  t_main.h  test_all.cc  test_coverage.gyp
src/ttfdiff/: CMakeLists.txt  argument_parser.cc  argument_parser.h  cairo_helper.cc  cairo_helper.h  diff_job.cc  diff_job.h  font.cc  font.h  font_collection.cc  font_collection.h  font_loader.cc  font_loader.h  icu_helper.cc  language.cc  language.h  line.cc  line.h  line_differ.cc  line_differ.h  main.cc  page.cc  page.h  paragraph.cc  paragraph.h  sha1.cc  shaped_text.cc  shaped_text.h  specimen.html  style.cc  style.h  style_key.cc  ttfdiff.gyp
